--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>org.example</groupId>
     <artifactId>db-lessons</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.directory>target</project.build.directory>
+    </properties>     
     <build>
         <plugins>
             <plugin>
@@ -17,6 +20,31 @@
                     <target>7</target>
                 </configuration>
             </plugin>
+                 
+            <plugin>
+                <groupId>org.bsc.maven</groupId>
+                <artifactId>maven-processor-plugin</artifactId>
+                <version>2.2.4</version>
+                <executions>
+                    <execution>
+                        <id>process</id>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/generated-sources/metamodel</outputDirectory>
+                            <compilerArguments>
+                                -Aeclipselink.persistencexml=src/main/resources/META-INF/persistence.xml
+                            </compilerArguments>
+                            <processors>
+                                <processor>org.eclipse.persistence.internal.jpa.modelgen.CanonicalModelProcessor
+                                </processor>
+                            </processors>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>     
         </plugins>
     </build>
 
@@ -64,6 +92,12 @@
             <artifactId>eclipselink</artifactId>
             <version>2.7.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/org.eclipse.persistence.jpa.modelgen.processor -->
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+            <version>2.7.5</version>
+        </dependency>     
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
